# vision-recognition-app

./: .gitignore  README.md  face_data.pkl  face_model.yml  main.py  pyproject.toml  requirements.txt
src/: hand_gesture_recognition.py
