[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-recognition-app"
version = "0.1.0"
description = "An application for hand gesture recognition, face detection, and face recognition using OpenCV and MediaPipe"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = {text = "MIT"}

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
